S3 service while delete image empty file url issue fixed